Refactor DashboardPage to StatefulWidget and implement mood data loading with error handling; add period selector and mood summary features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   speech_to_text: ^7.0.0
   record: ^6.0.0
   google_generative_ai: ^0.4.6
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
